# EUtilities

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-project.yml  build.yml  c-cpp.yml  create-release.yml  release.yml
include/: EShortcutListener.hpp  EUtilities-Windows.hpp  EUtilities.h  EUtilities.hpp
src/: EShortcutListener.cpp  EUtilities-Windows.cpp  EUtilities-Windows.h  EUtilities.cpp  EUtilities.h  EUtilities.ixx
tests/: CMakeLists.txt  EShortcutListenerTest.cpp  EUtilitiesManualTest.cpp  EUtilitiesTest.cpp  WhatKeysAmIPressing.cpp  main.cpp
